grammarcodeParser.py
# Generated from grammarcode.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class grammarcodeParser ( Parser ):

    grammarFileName = "grammarcode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Inicio'", "'Terminar'", "'Escribe'", 
                     "'Lee'", "'SI'", "'SINO'", "'Hacer'", "'Fin'", "'Repetir'", 
                     "'veces'", "'Mientras'", "'entero'", "'decimal'", "'palabra'", 
                     "'esVerdad'", "'regresar'", "'receta'", "'mas'", "'menos'", 
                     "'por'", "'entre'", "'potencia'", "'raiz'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'si'", "'no'", 
                     "<INVALID>", "'('", "')'", "'->'", "','", "'<'", "'>'", 
                     "'<='", "'>='", "'=='", "'!='", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "INICIO", "TERMINAR", "ESCRIBE", "LEE", 
                      "SI", "SINO", "HACER", "FIN", "REPETIR", "VECES", 
                      "MIENTRAS", "ENTERO", "DECIMAL", "PALABRA", "ESVERDAD", 
                      "REGRESAR", "RECIPE", "MAS", "MENOS", "POR", "ENTRE", 
                      "POTENCIA", "RAIZ", "IDENTIFIER", "DECIMAL_NUMBER", 
                      "NUMBER", "STRING", "BOOLEAN_TRUE", "BOOLEAN_FALSE", 
                      "WS", "LPAREN", "RPAREN", "ARROW", "COMMA", "LESS", 
                      "GREATER", "LEQ", "GEQ", "EQ", "NEQ", "LBRACKET", 
                      "RBRACKET" ]

    RULE_program = 0
    RULE_inicioBloque = 1
    RULE_statement = 2
    RULE_asignacion = 3
    RULE_tipo = 4
    RULE_expression = 5
    RULE_valor = 6
    RULE_ciclo = 7
    RULE_repetirCiclo = 8
    RULE_mientrasCiclo = 9
    RULE_condicional = 10
    RULE_condition = 11
    RULE_definicionFuncion = 12
    RULE_parameters = 13
    RULE_llamadaFuncion = 14
    RULE_arguments = 15
    RULE_printStatement = 16

    ruleNames =  [ "program", "inicioBloque", "statement", "asignacion", 
                   "tipo", "expression", "valor", "ciclo", "repetirCiclo", 
                   "mientrasCiclo", "condicional", "condition", "definicionFuncion", 
                   "parameters", "llamadaFuncion", "arguments", "printStatement" ]

    EOF = Token.EOF
    INICIO=1
    TERMINAR=2
    ESCRIBE=3
    LEE=4
    SI=5
    SINO=6
    HACER=7
    FIN=8
    REPETIR=9
    VECES=10
    MIENTRAS=11
    ENTERO=12
    DECIMAL=13
    PALABRA=14
    ESVERDAD=15
    REGRESAR=16
    RECIPE=17
    MAS=18
    MENOS=19
    POR=20
    ENTRE=21
    POTENCIA=22
    RAIZ=23
    IDENTIFIER=24
    DECIMAL_NUMBER=25
    NUMBER=26
    STRING=27
    BOOLEAN_TRUE=28
    BOOLEAN_FALSE=29
    WS=30
    LPAREN=31
    RPAREN=32
    ARROW=33
    COMMA=34
    LESS=35
    GREATER=36
    LEQ=37
    GEQ=38
    EQ=39
    NEQ=40
    LBRACKET=41
    RBRACKET=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERMINAR(self):
            return self.getToken(grammarcodeParser.TERMINAR, 0)

        def inicioBloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarcodeParser.InicioBloqueContext)
            else:
                return self.getTypedRuleContext(grammarcodeParser.InicioBloqueContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarcodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarcodeParser.StatementContext,i)


        def getRuleIndex(self):
            return grammarcodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = grammarcodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16972330) != 0):
                self.state = 36
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 34
                    self.inicioBloque()
                    pass
                elif token in [3, 5, 9, 11, 12, 13, 14, 15, 17, 24]:
                    self.state = 35
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 41
            self.match(grammarcodeParser.TERMINAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InicioBloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INICIO(self):
            return self.getToken(grammarcodeParser.INICIO, 0)

        def LPAREN(self):
            return self.getToken(grammarcodeParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(grammarcodeParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarcodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarcodeParser.StatementContext,i)


        def getRuleIndex(self):
            return grammarcodeParser.RULE_inicioBloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInicioBloque" ):
                listener.enterInicioBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInicioBloque" ):
                listener.exitInicioBloque(self)




    def inicioBloque(self):

        localctx = grammarcodeParser.InicioBloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_inicioBloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(grammarcodeParser.INICIO)
            self.state = 44
            self.match(grammarcodeParser.LPAREN)
            self.state = 45
            self.match(grammarcodeParser.RPAREN)
            self.state = 47 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 46
                    self.statement()

                else:
                    raise NoViableAltException(self)
                self.state = 49 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(grammarcodeParser.AsignacionContext,0)


        def ciclo(self):
            return self.getTypedRuleContext(grammarcodeParser.CicloContext,0)


        def condicional(self):
            return self.getTypedRuleContext(grammarcodeParser.CondicionalContext,0)


        def definicionFuncion(self):
            return self.getTypedRuleContext(grammarcodeParser.DefinicionFuncionContext,0)


        def llamadaFuncion(self):
            return self.getTypedRuleContext(grammarcodeParser.LlamadaFuncionContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(grammarcodeParser.PrintStatementContext,0)


        def getRuleIndex(self):
            return grammarcodeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = grammarcodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12, 13, 14, 15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.asignacion()
                pass
            elif token in [9, 11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.ciclo()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.condicional()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 4)
                self.state = 54
                self.definicionFuncion()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 5)
                self.state = 55
                self.llamadaFuncion()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 6)
                self.state = 56
                self.printStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(grammarcodeParser.TipoContext,0)


        def IDENTIFIER(self):
            return self.getToken(grammarcodeParser.IDENTIFIER, 0)

        def ARROW(self):
            return self.getToken(grammarcodeParser.ARROW, 0)

        def expression(self):
            return self.getTypedRuleContext(grammarcodeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return grammarcodeParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = grammarcodeParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.tipo()
            self.state = 60
            self.match(grammarcodeParser.IDENTIFIER)
            self.state = 61
            self.match(grammarcodeParser.ARROW)
            self.state = 62
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTERO(self):
            return self.getToken(grammarcodeParser.ENTERO, 0)

        def DECIMAL(self):
            return self.getToken(grammarcodeParser.DECIMAL, 0)

        def PALABRA(self):
            return self.getToken(grammarcodeParser.PALABRA, 0)

        def ESVERDAD(self):
            return self.getToken(grammarcodeParser.ESVERDAD, 0)

        def getRuleIndex(self):
            return grammarcodeParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = grammarcodeParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 61440) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RAIZ(self):
            return self.getToken(grammarcodeParser.RAIZ, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarcodeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(grammarcodeParser.ExpressionContext,i)


        def IDENTIFIER(self):
            return self.getToken(grammarcodeParser.IDENTIFIER, 0)

        def valor(self):
            return self.getTypedRuleContext(grammarcodeParser.ValorContext,0)


        def MAS(self):
            return self.getToken(grammarcodeParser.MAS, 0)

        def MENOS(self):
            return self.getToken(grammarcodeParser.MENOS, 0)

        def POR(self):
            return self.getToken(grammarcodeParser.POR, 0)

        def ENTRE(self):
            return self.getToken(grammarcodeParser.ENTRE, 0)

        def POTENCIA(self):
            return self.getToken(grammarcodeParser.POTENCIA, 0)

        def getRuleIndex(self):
            return grammarcodeParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = grammarcodeParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.state = 67
                self.match(grammarcodeParser.RAIZ)
                self.state = 68
                self.expression(3)
                pass
            elif token in [24]:
                self.state = 69
                self.match(grammarcodeParser.IDENTIFIER)
                pass
            elif token in [25, 26, 27, 28, 29]:
                self.state = 70
                self.valor()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 90
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 88
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = grammarcodeParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 73
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 74
                        self.match(grammarcodeParser.MAS)
                        self.state = 75
                        self.expression(9)
                        pass

                    elif la_ == 2:
                        localctx = grammarcodeParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 76
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 77
                        self.match(grammarcodeParser.MENOS)
                        self.state = 78
                        self.expression(8)
                        pass

                    elif la_ == 3:
                        localctx = grammarcodeParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 79
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 80
                        self.match(grammarcodeParser.POR)
                        self.state = 81
                        self.expression(7)
                        pass

                    elif la_ == 4:
                        localctx = grammarcodeParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 82
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 83
                        self.match(grammarcodeParser.ENTRE)
                        self.state = 84
                        self.expression(6)
                        pass

                    elif la_ == 5:
                        localctx = grammarcodeParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 85
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 86
                        self.match(grammarcodeParser.POTENCIA)
                        self.state = 87
                        self.expression(5)
                        pass

             
                self.state = 92
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ValorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECIMAL_NUMBER(self):
            return self.getToken(grammarcodeParser.DECIMAL_NUMBER, 0)

        def NUMBER(self):
            return self.getToken(grammarcodeParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(grammarcodeParser.STRING, 0)

        def BOOLEAN_TRUE(self):
            return self.getToken(grammarcodeParser.BOOLEAN_TRUE, 0)

        def BOOLEAN_FALSE(self):
            return self.getToken(grammarcodeParser.BOOLEAN_FALSE, 0)

        def getRuleIndex(self):
            return grammarcodeParser.RULE_valor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor" ):
                listener.enterValor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor" ):
                listener.exitValor(self)




    def valor(self):

        localctx = grammarcodeParser.ValorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_valor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1040187392) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def repetirCiclo(self):
            return self.getTypedRuleContext(grammarcodeParser.RepetirCicloContext,0)


        def mientrasCiclo(self):
            return self.getTypedRuleContext(grammarcodeParser.MientrasCicloContext,0)


        def getRuleIndex(self):
            return grammarcodeParser.RULE_ciclo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCiclo" ):
                listener.enterCiclo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCiclo" ):
                listener.exitCiclo(self)




    def ciclo(self):

        localctx = grammarcodeParser.CicloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ciclo)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.repetirCiclo()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.mientrasCiclo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepetirCicloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPETIR(self):
            return self.getToken(grammarcodeParser.REPETIR, 0)

        def NUMBER(self):
            return self.getToken(grammarcodeParser.NUMBER, 0)

        def VECES(self):
            return self.getToken(grammarcodeParser.VECES, 0)

        def HACER(self):
            return self.getToken(grammarcodeParser.HACER, 0)

        def FIN(self):
            return self.getToken(grammarcodeParser.FIN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarcodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarcodeParser.StatementContext,i)


        def getRuleIndex(self):
            return grammarcodeParser.RULE_repetirCiclo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepetirCiclo" ):
                listener.enterRepetirCiclo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepetirCiclo" ):
                listener.exitRepetirCiclo(self)




    def repetirCiclo(self):

        localctx = grammarcodeParser.RepetirCicloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_repetirCiclo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(grammarcodeParser.REPETIR)
            self.state = 100
            self.match(grammarcodeParser.NUMBER)
            self.state = 101
            self.match(grammarcodeParser.VECES)
            self.state = 102
            self.match(grammarcodeParser.HACER)
            self.state = 104 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 103
                self.statement()
                self.state = 106 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 16972328) != 0)):
                    break

            self.state = 108
            self.match(grammarcodeParser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MientrasCicloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MIENTRAS(self):
            return self.getToken(grammarcodeParser.MIENTRAS, 0)

        def LPAREN(self):
            return self.getToken(grammarcodeParser.LPAREN, 0)

        def condition(self):
            return self.getTypedRuleContext(grammarcodeParser.ConditionContext,0)


        def RPAREN(self):
            return self.getToken(grammarcodeParser.RPAREN, 0)

        def HACER(self):
            return self.getToken(grammarcodeParser.HACER, 0)

        def FIN(self):
            return self.getToken(grammarcodeParser.FIN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarcodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarcodeParser.StatementContext,i)


        def getRuleIndex(self):
            return grammarcodeParser.RULE_mientrasCiclo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMientrasCiclo" ):
                listener.enterMientrasCiclo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMientrasCiclo" ):
                listener.exitMientrasCiclo(self)




    def mientrasCiclo(self):

        localctx = grammarcodeParser.MientrasCicloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_mientrasCiclo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(grammarcodeParser.MIENTRAS)
            self.state = 111
            self.match(grammarcodeParser.LPAREN)
            self.state = 112
            self.condition()
            self.state = 113
            self.match(grammarcodeParser.RPAREN)
            self.state = 114
            self.match(grammarcodeParser.HACER)
            self.state = 116 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 115
                self.statement()
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 16972328) != 0)):
                    break

            self.state = 120
            self.match(grammarcodeParser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(grammarcodeParser.SI, 0)

        def LPAREN(self):
            return self.getToken(grammarcodeParser.LPAREN, 0)

        def condition(self):
            return self.getTypedRuleContext(grammarcodeParser.ConditionContext,0)


        def RPAREN(self):
            return self.getToken(grammarcodeParser.RPAREN, 0)

        def HACER(self, i:int=None):
            if i is None:
                return self.getTokens(grammarcodeParser.HACER)
            else:
                return self.getToken(grammarcodeParser.HACER, i)

        def FIN(self):
            return self.getToken(grammarcodeParser.FIN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarcodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarcodeParser.StatementContext,i)


        def SINO(self):
            return self.getToken(grammarcodeParser.SINO, 0)

        def getRuleIndex(self):
            return grammarcodeParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)




    def condicional(self):

        localctx = grammarcodeParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(grammarcodeParser.SI)
            self.state = 123
            self.match(grammarcodeParser.LPAREN)
            self.state = 124
            self.condition()
            self.state = 125
            self.match(grammarcodeParser.RPAREN)
            self.state = 126
            self.match(grammarcodeParser.HACER)
            self.state = 128 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 127
                self.statement()
                self.state = 130 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 16972328) != 0)):
                    break

            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 132
                self.match(grammarcodeParser.SINO)
                self.state = 133
                self.match(grammarcodeParser.HACER)
                self.state = 135 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 134
                    self.statement()
                    self.state = 137 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 16972328) != 0)):
                        break



            self.state = 141
            self.match(grammarcodeParser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarcodeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(grammarcodeParser.ExpressionContext,i)


        def LESS(self):
            return self.getToken(grammarcodeParser.LESS, 0)
